# build-pypackage-with-bazel

./: .gitignore  MANIFEST.in  WORKSPACE  pyproject.toml  setup.py
src/cpputils/: BUILD  __init__.py  lib.cc  lib.pyi
